--- a/projects/demo/src/app/app.html
+++ b/projects/demo/src/app/app.html
@@ -1,3 +1,16 @@
 <router-outlet />
 
+<geo-canvas #div class="cursor-rotate-15" style="width: 1200px; height: 1200px; background-color: bisque">
+  <geo-transformer
+    [position]="{x: 20, y: 20}"
+    [size]="{width: 20, height: 20}"
+    [selected]="true"
+    [movable]="true"
+    [resizable]="true"
+    [rotatable]="true"
+  >
+    <h1>abc</h1>
+  </geo-transformer>
+</geo-canvas>
 
+<!-- <geo-cursor /> -->
