--- a/projects/uigeo/src/lib/components/transformer/transformer.scss
+++ b/projects/uigeo/src/lib/components/transformer/transformer.scss
@@ -6,13 +6,21 @@
   border: 1px solid transparent;
 
   &.selected {
-    border: 1px solid var(--geo-transformer-border-color, #007bff);
+    border: solid 1px var(--geo-transformer-border-color, #007bff);
+  }
+
+  &:not(.selected) .anchor
+  // &:not(&.resizable) .resize-anchor,
+  // &:not(&.resizable) .border &:not(&.rotatable) .rotate-anchor
+   {
+    display: none;
   }
 }
 
 .content {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .anchor {
